improve for self usage in future
