# docs/swagger.json
@@ -26,7 +26,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.FieldRefreshToken"
+                            "$ref": "#/definitions/auth_request.FieldRefreshToken"
                         }
                     }
                 ],
@@ -36,14 +36,14 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.ResponseAuthOk"
+                                "$ref": "#/definitions/auth_response.JWT"
                             }
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/dto.responseOneMessage"
+                            "$ref": "#/definitions/shared_dto.ResponseOneMessage"
                         }
                     }
                 }
@@ -69,7 +69,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.FieldAuthSendOTP"
+                            "$ref": "#/definitions/auth_request.FieldSendOTP"
                         }
                     }
                 ],
@@ -79,20 +79,20 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.responseOneMessage"
+                                "$ref": "#/definitions/shared_dto.ResponseOneMessage"
                             }
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.responseOneMessage"
+                            "$ref": "#/definitions/shared_dto.ResponseOneMessage"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "$ref": "#/definitions/dto.responseOneMessage"
+                            "$ref": "#/definitions/shared_dto.ResponseOneMessage"
                         }
                     }
                 }
@@ -118,7 +118,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.FieldAuthVerifyOTP"
+                            "$ref": "#/definitions/auth_request.FieldVerifyOTP"
                         }
                     }
                 ],
@@ -128,21 +128,21 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.ResponseAuthOk"
+                                "$ref": "#/definitions/auth_response.JWT"
                             }
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/dto.responseOneMessage"
+                            "$ref": "#/definitions/shared_dto.ResponseOneMessage"
                         }
                     }
                 }
             }
         },
         "/profile/update": {
-            "put": {
+            "patch": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -166,7 +166,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UpdateUserDetails"
+                            "$ref": "#/definitions/user_request.UpdateDetails"
                         }
                     }
                 ],
@@ -174,13 +174,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseUserDetails"
+                            "$ref": "#/definitions/user_response.Details"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.responseOneMessage"
+                            "$ref": "#/definitions/shared_dto.ResponseOneMessage"
                         }
                     }
                 }
@@ -230,13 +230,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseUserList"
+                            "$ref": "#/definitions/user_response.List"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.responseOneMessage"
+                            "$ref": "#/definitions/shared_dto.ResponseOneMessage"
                         }
                     }
                 }
@@ -268,13 +268,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseUserDetails"
+                            "$ref": "#/definitions/user_response.Details"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/shared_dto.ResponseOneMessage"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.responseOneMessage"
+                            "$ref": "#/definitions/shared_dto.ResponseOneMessage"
                         }
                     }
                 }
@@ -282,7 +288,18 @@
         }
     },
     "definitions": {
-        "dto.FieldAuthSendOTP": {
+        "auth_request.FieldRefreshToken": {
+            "type": "object",
+            "required": [
+                "refreshToken"
+            ],
+            "properties": {
+                "refreshToken": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth_request.FieldSendOTP": {
             "type": "object",
             "required": [
                 "phoneNumber"
@@ -293,7 +310,7 @@
                 }
             }
         },
-        "dto.FieldAuthVerifyOTP": {
+        "auth_request.FieldVerifyOTP": {
             "type": "object",
             "required": [
                 "code",
@@ -308,18 +325,18 @@
                 }
             }
         },
-        "dto.FieldRefreshToken": {
+        "auth_response.JWT": {
             "type": "object",
-            "required": [
-                "refreshToken"
-            ],
             "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
                 "refreshToken": {
                     "type": "string"
                 }
             }
         },
-        "dto.MetaPagination": {
+        "shared_dto.MetaPagination": {
             "type": "object",
             "properties": {
                 "currentPage": {
@@ -339,18 +356,32 @@
                 }
             }
         },
-        "dto.ResponseAuthOk": {
+        "shared_dto.ResponseOneMessage": {
             "type": "object",
             "properties": {
-                "accessToken": {
-                    "type": "string"
+                "code": {
+                    "type": "integer"
                 },
-                "refreshToken": {
+                "message": {
                     "type": "string"
                 }
             }
         },
-        "dto.ResponseUserDetails": {
+        "user_request.UpdateDetails": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                }
+            }
+        },
+        "user_response.Details": {
             "type": "object",
             "properties": {
                 "email": {
@@ -373,42 +404,17 @@
                 }
             }
         },
-        "dto.ResponseUserList": {
+        "user_response.List": {
             "type": "object",
             "properties": {
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.ResponseUserDetails"
+                        "$ref": "#/definitions/user_response.Details"
                     }
                 },
                 "meta": {
-                    "$ref": "#/definitions/dto.MetaPagination"
-                }
-            }
-        },
-        "dto.UpdateUserDetails": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string"
-                },
-                "lastName": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.responseOneMessage": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
+                    "$ref": "#/definitions/shared_dto.MetaPagination"
                 }
             }
         }
